# IntervU-AI

./: .editorconfig  .env.example  .gitignore  README.md  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/ai/: README.md
backend/app/ai/graphs/: README.md
backend/app/ai/prompts/: README.md  answer_evaluation.txt  claim_extraction.txt  feedback_generation.txt  follow_up_generation.txt  interview_question_behavioral.txt  interview_question_cs_fundamentals.txt  interview_question_dsa.txt  interview_question_project.txt  job_description_processing.txt  loader.py  resume_parsing.txt  resume_parsing_hybrid.txt  transcript_refinement.txt
backend/app/ai/providers/: README.md  base.py  factory.py  fallback.py  gemini.py  openai_compatible.py
backend/app/ai/synthesis/: README.md  base.py  factory.py
backend/app/ai/synthesis/strategies/: fake_synthesizer.py
backend/app/ai/transcription/: README.md  base.py  factory.py  schemas.py
backend/app/ai/transcription/strategies/: fake_transcriber.py  whisper_transcriber.py
backend/app/ai/vectorstore/: README.md
backend/app/api/: README.md  router.py
backend/app/api/v1/: health.py  router.py
backend/app/core/: README.md  config.py  container.py  exceptions.py  logging.py
backend/app/core/security/: google.py  passwords.py  tokens.py
backend/app/db/: README.md  base.py  engine.py  mixins.py  registry.py  repository.py  session.py
backend/app/features/: README.md
backend/app/features/auth/: README.md  dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/features/dashboard/: aggregator.py  dependencies.py  router.py  schemas.py  service.py
backend/app/features/evaluation/: README.md  context_builder.py  dependencies.py  factory.py  improvement_filter.py  json_response.py  models.py  phase_guidance.py  protocols.py  repository.py  schemas.py  service.py  validator.py
backend/app/features/evaluation/strategies/: __init__.py  llm_evaluator.py
backend/app/features/feedback/: README.md  context_builder.py  dependencies.py  factory.py  json_response.py  models.py  prompt_context.py  protocols.py  repository.py  router.py  schemas.py  service.py  synthesis_filter.py  validator.py
backend/app/features/feedback/strategies/: __init__.py  llm_generator.py
backend/app/features/interview/: README.md  dependencies.py  execution_mapper.py  mapper.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/features/interview/execution/: __init__.py  engine.py  exceptions.py  project_selection.py  question_provider.py  schemas.py  service.py  state_machine.py
backend/app/features/interview/follow_up/: README.md  claim_filter.py  factory.py  json_response.py  prompt_context.py  protocols.py  schemas.py  service.py  validator.py
backend/app/features/interview/memory/: README.md  builder.py  factory.py  prompt_context.py  protocols.py  (+1 more)
backend/app/features/job_description/: README.md  dependencies.py  mapper.py  router.py  schemas.py
backend/app/features/resume/: README.md  dependencies.py  mapper.py  models.py  parse_stream.py  parsed_mapper.py  parsed_models.py  parsed_repository.py  repository.py  router.py  schemas.py  service.py  storage.py  validators.py
backend/app/features/user/: README.md  models.py  repository.py
backend/app/features/voice/: README.md  audio_duration.py  audio_formats.py  audio_processor.py  context_builder.py  context_loader.py  dependencies.py  factory.py  protocols.py  router.py  schemas.py  service.py  transcribe_stream.py
backend/app/shared/: README.md  llm_json.py  pdf_upload.py  types.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_auth.py  0003_resumes.py  0004_resume_parsed_profiles.py  0005_parsed_achievements.py  0006_interview_creation_state.py  0007_interview_execution_engine.py  0008_answer_evaluations.py  0009_google_auth.py
backend/tests/: README.md  conftest.py
backend/tests/integration/: conftest.py  helpers.py  test_auth.py  test_dashboard.py  test_feedback_generation.py  test_follow_up_generation.py  test_interview_creation.py  test_interview_execution.py  test_job_description_processing.py  test_resume_parsing.py  test_resume_upload.py  test_voice_transcription.py
backend/tests/unit/: test_answer_evaluation_improvement_filter.py  test_answer_evaluation_phase_guidance.py  test_answer_evaluation_service.py  test_answer_evaluation_validator.py  test_audio_formats.py  test_audio_processor.py  test_claim_filter.py  test_dashboard_aggregator.py  test_feedback_context_builder.py  test_feedback_service.py  test_feedback_synthesis_filter.py  test_feedback_validator.py  test_follow_up_service.py  test_hybrid_parser.py  test_interview_engine.py  test_interview_memory.py  test_interview_planner.py  test_interview_project_selection.py  test_job_description_input.py  test_job_description_llm_analyzer.py  test_job_description_validator.py  test_json_response.py  test_llm_provider_factory.py  test_normalization.py  test_production_settings.py  test_project_name_dedupe.py  test_project_names.py  test_prompt_utils.py  test_question_generation_service.py  test_question_selector.py  test_question_validator.py  test_repositories.py  test_resume_parsing_service.py  test_resume_parsing_validator.py  test_resume_pdf_text.py  test_resume_storage.py  test_resume_validators.py  test_rule_extractor.py  test_synthesizer.py  test_text_trim.py  (+3 more)
(+160 files in other folders)
