[project]
name = "interviewerai-backend"
version = "0.1.0"
description = "InterviewerAI backend — an AI mock-interview platform (FastAPI)."
requires-python = ">=3.13"
readme = "README.md"

# Core runtime dependencies. Lower bounds only; the lockfile / resolver picks
# the concrete version. Keep AI and voice deps in separate optional groups so
# the base install stays light.
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "python-multipart>=0.0.12",
    "structlog>=24.4",
    "httpx>=0.27",
]

[project.optional-dependencies]
# AI stack — installed when working on retrieval / interview-graph iterations.
ai = [
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langchain-community>=0.3",
    "chromadb>=0.5",
    "openai>=1.50",
]
# Voice stack — Whisper transcription. Heavier; install only when needed.
voice = [
    "faster-whisper>=1.0",
]
# Developer tooling.
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------------------------------------------------------------------
# Ruff — linting + formatting
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py313"
src = ["app", "tests"]

[tool.ruff.lint]
# A pragmatic, strict-ish set: pycodestyle, pyflakes, isort, bugbear,
# comprehensions, pyupgrade, and simplify.
select = ["E", "F", "I", "B", "C4", "UP", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ---------------------------------------------------------------------------
# mypy — strict typing everywhere
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

# ---------------------------------------------------------------------------
# Pytest + coverage
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_empty = true
